--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link px-lg-3 py-3 py-lg-4">Logout</button>
+                <button type="submit" class="mt-2 nav-link px-lg-4 py-4 py-lg-2 btn-gradient gradient-7 rounded-pill">Logout</button>
         </form>
     </li>
 }
