--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -5,11 +5,11 @@
 <ul class="nav nav-pills flex-column">
     @if (User.IsInRole("Owner"))
     {
-        <li class="nav-item"><a class="nav-link @ManageNavPages.OwnerPanelNavClass(ViewContext)" id="owner-panel" asp-page="./OwnerPanel">Owner Panel</a></li>
+        <li class="nav-item"><a class="nav-link @ManageNavPages.OwnerPanelNavClass(ViewContext)" id="owner-panel" asp-page="./OwnerPanel">Owner Control Panel</a></li>
     }
     else if (User.IsInRole("Administrator"))
     {
-        <li class="nav-item"><a class="nav-link @ManageNavPages.AdminPanelNavClass(ViewContext)" id="admin-panel" asp-page="./AdminPanel">Administrator Panel</a></li>
+        <li class="nav-item"><a class="nav-link @ManageNavPages.AdminPanelNavClass(ViewContext)" id="admin-panel" asp-page="./AdminPanel">Administrator Control Panel</a></li>
     }
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.SocialMediaNavClass(ViewContext)" id="social-media" asp-page="./SocialMedia">Social Media</a></li>
