--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/sandbox/css/style.css" />
     <link rel="stylesheet" href="~/lib/sandbox/css/colors/navy.css" />
     <link rel="preload" href="~/lib/sandbox/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'" />
+    <link rel="stylesheet" href="~/lib/sandbox/css/custom.css" />
 </head>
 <body>
     <div class="content-wrapper">        
