--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using NuJournalPro.Areas.Identity
 @using NuJournalPro.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using NuJournalPro.Models.Database
+@using NuJournalPro.Models
