--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model IndexModel
+@model PersonalProfileModel
 @{
-    ViewData["Title"] = "Profile: " + Model.UserRole;
+    ViewData["Title"] = "Profile: ";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
@@ -11,39 +11,65 @@
     <div class="col-md-6">
         <div class="card mb-4">
             <div class="card-body">
-                <form id="profile-form" method="post">
+                <form asp-page-handler="SaveProfileChanges" id="profile-form" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating">
-                        <input asp-for="Username" class="form-control" disabled />
-                        <label asp-for="Username" class="form-label">Email / Username</label>
+                        <input asp-for="UserInfo.UserName" class="form-control" disabled />
+                        <label asp-for="UserInfo.UserName" class="form-label"></label>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.FirstName" class="form-control" />
-                        <label asp-for="Input.FirstName" class="form-label"></label>
-                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                        <input asp-for="UserInfo.FirstName" class="form-control" />
+                        <label asp-for="UserInfo.FirstName" class="form-label"></label>
+                        <span asp-validation-for="UserInfo.FirstName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-2">
-                        <input asp-for="Input.MiddleName" class="form-control" />
-                        <label asp-for="Input.MiddleName" class="form-label"></label>
-                        <span asp-validation-for="Input.MiddleName" class="text-danger"></span>
+                        <input asp-for="UserInfo.MiddleName" class="form-control" />
+                        <label asp-for="UserInfo.MiddleName" class="form-label"></label>
+                        <span asp-validation-for="UserInfo.MiddleName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-2">
-                        <input asp-for="Input.LastName" class="form-control" />
-                        <label asp-for="Input.LastName" class="form-label"></label>
-                        <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                        <input asp-for="UserInfo.LastName" class="form-control" />
+                        <label asp-for="UserInfo.LastName" class="form-label"></label>
+                        <span asp-validation-for="UserInfo.LastName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.DisplayName" class="form-control" />
-                        <label asp-for="Input.DisplayName" class="form-label"></label>
-                        <span asp-validation-for="Input.DisplayName" class="text-danger"></span>
+                        <input asp-for="UserInfo.DisplayName" class="form-control" />
+                        <label asp-for="UserInfo.DisplayName" class="form-label"></label>
+                        <span asp-validation-for="UserInfo.DisplayName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.PhoneNumber" class="form-control" />
-                        <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                        <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                        <input asp-for="UserInfo.PhoneNumber" class="form-control" />
+                        <label asp-for="UserInfo.PhoneNumber" class="form-label"></label>
+                        <span asp-validation-for="UserInfo.PhoneNumber" class="text-danger"></span>
                     </div>
                     <div class="mt-4">
                         <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="card mb-4">
+            <div class="card-body">
+                <form asp-page-handler="UpdateProfilePicture" id="profile-picture-form" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="square-img-container">
+                        <img id="contactImage" class="square-img" src="@Model.UserInfo.ProfilePicture?.DecodedImage" alt="Profile Picture" />
+                    </div>
+                    <div class="mt-4">
+                        <label asp-for="ProfilePictureFile" class="control-label" class="form-label">Select a profile picture for @Model.UserInfo.Email</label>
+                        <input type="file" asp-for="ProfilePictureFile" class="form-control" accept=".jpg,.jpeg,.svg,.png,.gif" onchange="document.getElementById('contactImage').src=window.URL.createObjectURL(this.files[0])" />
+                        <span asp-validation-for="ProfilePictureFile" class="text-danger"></span>
+                    </div>
+                    <div class="mt-4">
+                        <div class="form-check">
+                            <input asp-for="DeleteProfilePictureCheckbox" class="form-check-input" />
+                            <label asp-for="DeleteProfilePictureCheckbox">Delete profile picture</label>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <button id="update-profile-picture-button" type="submit" class="w-100 btn btn-lg btn-primary">Update</button>
                     </div>
                 </form>
             </div>
