--- a/Areas/Identity/Pages/Account/Manage/AddNewUser.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/AddNewUser.cshtml
@@ -1,4 +1,117 @@
 ﻿@page
-@model NuJournalPro.Areas.Identity.Pages.Account.Manage.AddNewUserModel
+@model AddNewUserModel
+
 @{
+    var isOwner = User.IsInRole("Owner");
+    var isAdmin = User.IsInRole("Administrator");
+    if (isOwner || isAdmin)
+    {
+        ViewData["Title"] = "Add New User Account";
+        if (isOwner) ViewData["ActivePage"] = ManageNavPages.OwnerPanel;        
+        if (isAdmin) ViewData["ActivePage"] = ManageNavPages.AdminPanel;        
+
+        <h3>@ViewData["Title"]</h3>
+        <partial name="_StatusMessage" for="StatusMessage" />
+        <div class="row">
+            <div class="col-lg-12">
+                <form id="add-new-user-form" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <dvi class="row">
+                        <div class="col-lg-6">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <h5 class="card-title">Account Details</h5>
+                                    <div class="form-floating">
+                                        <input asp-for="NewUserInput.Email" class="form-control" onchange="document.getElementById('username-email-label').textContent='Select a profile picture for user: ' + this.value" />
+                                        <label asp-for="NewUserInput.Email" class="form-label"></label>
+                                    </div>
+                                    <div class="form-floating mt-3">
+                                        <div class="form-check">
+                                            <input asp-for="EmailConfirmedCheckbox" class="form-check-input" />
+                                            <label asp-for="EmailConfirmedCheckbox">Confirm Email</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-floating mt-3">
+                                        <input asp-for="NewUserInput.FirstName" class="form-control" />
+                                        <label asp-for="NewUserInput.FirstName" class="form-label"></label>
+                                        <span asp-validation-for="NewUserInput.FirstName" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-floating mt-2">
+                                        <input asp-for="NewUserInput.MiddleName" class="form-control" />
+                                        <label asp-for="NewUserInput.MiddleName" class="form-label"></label>
+                                        <span asp-validation-for="NewUserInput.MiddleName" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-floating mt-2">
+                                        <input asp-for="NewUserInput.LastName" class="form-control" />
+                                        <label asp-for="NewUserInput.LastName" class="form-label"></label>
+                                        <span asp-validation-for="NewUserInput.LastName" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-floating mt-3">
+                                        <input asp-for="NewUserInput.DisplayName" class="form-control" />
+                                        <label asp-for="NewUserInput.DisplayName" class="form-label"></label>
+                                        <span asp-validation-for="NewUserInput.DisplayName" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-floating mt-3">
+                                        <input asp-for="NewUserInput.PhoneNumber" class="form-control" />
+                                        <label asp-for="NewUserInput.PhoneNumber" class="form-label"></label>
+                                        <span asp-validation-for="NewUserInput.PhoneNumber" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-floating mt-2">
+                                        <input asp-for="NewUserInput.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                                        <label asp-for="NewUserInput.Password"></label>
+                                        <span asp-validation-for="NewUserInput.Password" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-floating mt-2">
+                                        <input asp-for="NewUserInput.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                                        <label asp-for="NewUserInput.ConfirmPassword"></label>
+                                        <span asp-validation-for="NewUserInput.ConfirmPassword" class="text-danger"></span>
+                                    </div>
+                                    @if (ViewData["UserRolesList"] != null)
+                                    {
+                                        <div class="form-floating">
+                                            <div class="form-select-wrapper mt-2">
+                                                <label asp-for="NewUserRole" class="control-label"></label>
+                                                <select asp-for="NewUserRole" class="form-select" asp-items="ViewBag.UserRolesList"></select>
+                                            </div>
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <h5 class="card-title">Profile Picture</h5>
+                                    <div class="square-img-container shadow-lg">
+                                        <img id="contactImage" class="square-img" src="@Model.NewUserInput.ProfilePicture?.DecodedImage" alt="Profile Picture" />
+                                    </div>
+                                    <div class="mt-4">
+                                        <label id="username-email-label" asp-for="NewUserInput.ImageFile" class="control-label" class="form-label">Select a profile picture for user: @Model.NewUserInput.Email</label>
+                                        <input type="file" asp-for="NewUserInput.ImageFile" class="form-control" accept=".jpg,.jpeg,.svg,.png,.gif" onchange="document.getElementById('contactImage').src=window.URL.createObjectURL(this.files[0])" />
+                                        <span asp-validation-for="NewUserInput.ImageFile" class="text-danger"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-4">
+                            <button id="create-new-user-button" type="submit" class="w-50 btn btn-lg btn-primary">Create User Account</button>
+                        </div>
+                    </dvi>
+                </form>
+            </div>
+        </div>
+    }
+    else
+    {
+        ViewData["Title"] = "Access Denied!";
+        ViewData["ActivePage"] = ManageNavPages.Index;
+        <h3 class="text-danger">@ViewData["Title"]</h3>
+        <div class="row d-flex justify-content-center">
+            <div class="col-lg-6">
+                <div class="any-square-img-container">
+                    <img id="accessDeniedImage" class="any-square-img" src="@Model.AccessDeniedImage" alt="Access Denied" />
+                </div>
+            </div>
+        </div>
+    }
 }
