--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -14,33 +14,33 @@
                 <form asp-page-handler="SaveProfileChanges" id="profile-form" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating">
-                        <input asp-for="UserInfo.UserName" class="form-control" disabled />
-                        <label asp-for="UserInfo.UserName" class="form-label"></label>
+                        <input asp-for="UserInput.UserName" class="form-control" disabled />
+                        <label asp-for="UserInput.UserName" class="form-label"></label>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="UserInfo.FirstName" class="form-control" />
-                        <label asp-for="UserInfo.FirstName" class="form-label"></label>
-                        <span asp-validation-for="UserInfo.FirstName" class="text-danger"></span>
+                        <input asp-for="UserInput.FirstName" class="form-control" />
+                        <label asp-for="UserInput.FirstName" class="form-label"></label>
+                        <span asp-validation-for="UserInput.FirstName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-2">
-                        <input asp-for="UserInfo.MiddleName" class="form-control" />
-                        <label asp-for="UserInfo.MiddleName" class="form-label"></label>
-                        <span asp-validation-for="UserInfo.MiddleName" class="text-danger"></span>
+                        <input asp-for="UserInput.MiddleName" class="form-control" />
+                        <label asp-for="UserInput.MiddleName" class="form-label"></label>
+                        <span asp-validation-for="UserInput.MiddleName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-2">
-                        <input asp-for="UserInfo.LastName" class="form-control" />
-                        <label asp-for="UserInfo.LastName" class="form-label"></label>
-                        <span asp-validation-for="UserInfo.LastName" class="text-danger"></span>
+                        <input asp-for="UserInput.LastName" class="form-control" />
+                        <label asp-for="UserInput.LastName" class="form-label"></label>
+                        <span asp-validation-for="UserInput.LastName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="UserInfo.DisplayName" class="form-control" />
-                        <label asp-for="UserInfo.DisplayName" class="form-label"></label>
-                        <span asp-validation-for="UserInfo.DisplayName" class="text-danger"></span>
+                        <input asp-for="UserInput.DisplayName" class="form-control" />
+                        <label asp-for="UserInput.DisplayName" class="form-label"></label>
+                        <span asp-validation-for="UserInput.DisplayName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="UserInfo.PhoneNumber" class="form-control" />
-                        <label asp-for="UserInfo.PhoneNumber" class="form-label"></label>
-                        <span asp-validation-for="UserInfo.PhoneNumber" class="text-danger"></span>
+                        <input asp-for="UserInput.PhoneNumber" class="form-control" />
+                        <label asp-for="UserInput.PhoneNumber" class="form-label"></label>
+                        <span asp-validation-for="UserInput.PhoneNumber" class="text-danger"></span>
                     </div>
                     <div class="mt-4">
                         <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
@@ -55,10 +55,10 @@
                 <form asp-page-handler="UpdateProfilePicture" id="profile-picture-form" method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="square-img-container">
-                        <img id="contactImage" class="square-img" src="@Model.UserInfo.ProfilePicture?.DecodedImage" alt="Profile Picture" />
+                        <img id="contactImage" class="square-img" src="@Model.UserInput.ProfilePicture?.DecodedImage" alt="Profile Picture" />
                     </div>
                     <div class="mt-4">
-                        <label asp-for="ProfilePictureFile" class="control-label" class="form-label">Select a profile picture for @Model.UserInfo.Email</label>
+                        <label asp-for="ProfilePictureFile" class="control-label" class="form-label">Select a profile picture for @Model.UserInput.Email</label>
                         <input type="file" asp-for="ProfilePictureFile" class="form-control" accept=".jpg,.jpeg,.svg,.png,.gif" onchange="document.getElementById('contactImage').src=window.URL.createObjectURL(this.files[0])" />
                         <span asp-validation-for="ProfilePictureFile" class="text-danger"></span>
                     </div>
