--- a/Areas/Identity/Pages/Account/Manage/OwnerPanel.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/OwnerPanel.cshtml
@@ -1,4 +1,53 @@
 ﻿@page
-@model NuJournalPro.Areas.Identity.Pages.Account.Manage.OwnerPanelModel
-@{
+@model OwnerPanelModel
+
+@if (User.IsInRole("Owner"))
+{
+    ViewData["Title"] = "Owner's Control Panel";
+    ViewData["ActivePage"] = ManageNavPages.OwnerPanel;
+
+    <h3>@ViewData["Title"]</h3>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <p>Add a new user account or edit the settings for existing users.</p>
+                    <div class="row">
+                        <div class="col-md-4 mt-4">
+                            <a id="add-new-user" asp-page="./AddNewUser" class="btn btn-primary w-100">Add New User</a>
+                        </div>
+                        <div class="col-md-4 mt-4">
+                            <a id="edit-existing-user" asp-page="./EditUser" class="btn btn-soft-primary w-100">Edit Existing User</a>
+                        </div>
+                        <div class="col-md-4 mt-4">
+                            <a id="delete-existing-user" asp-page="./DeleteUser" class="btn btn-orange w-100">Delete Existing User</a>
+                        </div>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-md-4 mt-4">
+                            <a id="delete-existing-user" asp-page="./RemoveUser" class="btn btn-danger w-100">Remove Existing User</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+else
+{
+    ViewData["Title"] = "Access Denied!";
+    ViewData["ActivePage"] = ManageNavPages.Index;
+    <h3>@ViewData["Title"]</h3>
+    <p>You do not have permission to access this page.</p>
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+            <div class="any-square-img-container">
+                <img id="accessDeniedImage" class="any-square-img" src="@Model.AccessDeniedImage" alt="Access Denied" />
+            </div>
+        </div>
+    </div>
+}
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
 }
