--- a/Areas/Identity/Pages/Account/Manage/RemoveUser.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/RemoveUser.cshtml
@@ -1,4 +1,53 @@
 ﻿@page
-@model NuJournalPro.Areas.Identity.Pages.Account.Manage.RemoveUserModel
-@{
+@model RemoveUserModel
+
+@if (User.IsInRole("Owner"))
+{
+    ViewData["Title"] = "Remove User Account";
+    ViewData["ActivePage"] = ManageNavPages.OwnerPanel;
+
+    <h3>@ViewData["Title"]</h3>
+    <partial name="_StatusMessage" for="StatusMessage" />
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <form id="delete-user-form" method="post" enctype="multipart/form-data">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <dvi class="row">
+                            <div class="col-lg-12">
+                                <div class="form-floating">
+                                    <div class="form-select-wrapper mt-2">
+                                        <label asp-for="SelectedUser" class="control-label"></label>
+                                        <select asp-for="SelectedUser" class="form-select" asp-items="ViewBag.SelectUserList"></select>
+                                    </div>
+                                </div>
+                                <div class="form-floating mt-4">
+                                    <input asp-for="ConfirmUserName" class="form-control" />
+                                    <label asp-for="ConfirmUserName" class="form-label"></label>
+                                </div>
+                                <div class="mt-4 text-center">
+                                    <button id="create-new-user-button" type="submit" class="btn btn-lg btn-danger">Delete User Account</button>
+                                </div>
+                            </div>
+                        </dvi>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+else
+{
+    ViewData["Title"] = "Access Denied";
+    ViewData["ActivePage"] = ManageNavPages.Index;
+    <h3>@ViewData["Title"]</h3>
+    <div class="row">
+        <div class="col-lg-12">
+            <partial name="_StatusMessage" for="StatusMessage" />
+            <div class="any-img-container-half-height">
+                <img id="accessDeniedImage" class="any-img-half-height" src="@Model.AccessDeniedImage" alt="Access Denied" />
+            </div>
+        </div>
+    </div>
 }
