Added further refinements to user account management.

--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalProfileModel
 @{
-    ViewData["Title"] = "Profile: ";
+    ViewData["Title"] = "Profile: " + Model.UserRole.ToString();
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
