--- a/Areas/Identity/Pages/Account/Manage/AdminPanel.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/AdminPanel.cshtml
@@ -8,19 +8,21 @@
 
     <h3>@ViewData["Title"]</h3>
     <div class="row">
-        <div class="col-md-6">
-            <p>Add a new user account or edit the settings for existing users.</p>
-            <div class="row">
-                <div class="col-md-6 mt-4">
-                    <a id="add-new-user" asp-page="./AddNewUser" class="btn btn-primary w-100">Add New User</a>
-                </div>
-                <div class="col-md-6 mt-4">
-                    <a id="edit-existing-user" asp-page="./EditUser" class="btn btn-primary w-100">Edit Existing User</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 mt-4 text-center">
-                    <a id="delete-existing-user" asp-page="./DeleteUser" class="btn btn-danger w-50">Delete Existing User</a>
+        <div class="col-md-12">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <p>Add a new user account or edit the settings for existing users.</p>
+                    <div class="row">
+                        <div class="col-md-4 mt-4">
+                            <a id="add-new-user" asp-page="./AddNewUser" class="btn btn-primary w-100">Add New User</a>
+                        </div>
+                        <div class="col-md-4 mt-4">
+                            <a id="edit-existing-user" asp-page="./EditUser" class="btn btn-soft-primary w-100">Edit Existing User</a>
+                        </div>
+                        <div class="col-md-4 mt-4">
+                            <a id="delete-existing-user" asp-page="./DeleteUser" class="btn btn-orange w-100">Delete Existing User</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
