--- a/Areas/Identity/Pages/Account/Manage/DeleteUser.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DeleteUser.cshtml
@@ -1,4 +1,81 @@
 ﻿@page
-@model NuJournalPro.Areas.Identity.Pages.Account.Manage.DeleteUserModel
+@model DeleteUserModel
+
 @{
+    var isOwner = User.IsInRole("Owner");
+    var isAdmin = User.IsInRole("Administrator");
+    if (isOwner || isAdmin)
+    {
+        ViewData["Title"] = "Remove User Account";
+        if (isOwner)
+        {
+            ViewData["ActivePage"] = ManageNavPages.OwnerPanel;
+        }
+        if (isAdmin)
+        {
+            ViewData["ActivePage"] = ManageNavPages.AdminPanel;
+        }
+
+        <h3>@ViewData["Title"]</h3>
+        <partial name="_StatusMessage" for="StatusMessage" />
+        <div class="row">
+            @if (ViewData["SelectUserList"] != null)
+            {
+                <div class="col-lg-12">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <form id="delete-user-form" method="post" enctype="multipart/form-data">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <dvi class="row">
+                                    <div class="col-lg-12">
+                                        <div class="form-floating">
+                                            <div class="form-select-wrapper mt-2">
+                                                <label asp-for="SelectedUser" class="control-label"></label>
+                                                <select asp-for="SelectedUser" class="form-select" asp-items="ViewBag.SelectUserList"></select>
+                                            </div>
+                                        </div>
+                                        <div class="form-floating mt-4">
+                                            <input asp-for="ConfirmUserName" class="form-control" />
+                                            <label asp-for="ConfirmUserName" class="form-label"></label>
+                                        </div>
+                                        <div class="mt-4 text-center">
+                                            <button id="create-new-user-button" type="submit" class="btn btn-lg btn-danger">Delete User Account</button>
+                                        </div>
+                                    </div>
+                                </dvi>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="alert alert-danger alert-icon mt-4" role="alert">
+                                    <i class="uil uil-lock"></i> There are no user accounts available for deletion.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+    else
+    {
+        ViewData["Title"] = "Access Denied";
+        ViewData["ActivePage"] = ManageNavPages.Index;
+        <h3>@ViewData["Title"]</h3>
+        <div class="row">
+            <div class="col-lg-12">
+                <partial name="_StatusMessage" for="StatusMessage" />
+                <div class="any-img-container-half-height">
+                    <img id="accessDeniedImage" class="any-img-half-height" src="@Model.AccessDeniedImage" alt="Access Denied" />
+                </div>
+            </div>
+        </div>
+    }
 }
