--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -6,19 +6,25 @@
 }
 
 <h3>@ViewData["Title"]</h3>
-
 <div class="row">
-    <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
-        <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-        </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
-        </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
-        </p>
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body">
+                <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+                <form id="download-data" asp-page="DownloadPersonalData" method="post">
+                    <button class="btn btn-lg btn-primary w-100" type="submit">Download</button>
+                </form>
+                <hr class="my-4" />
+                <div class="mt-4">
+                    <div class="alert alert-warning alert-icon alert-dismissible fade show" role="alert">
+                        <i class="uil uil-exclamation-triangle"></i> Deleting this data will permanently remove your account, and this cannot be recovered.                        
+                    </div>
+                    <p>
+                        <a id="delete" asp-page="DeletePersonalData" class="btn btn-lg btn-danger w-100">Delete</a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
