--- a/Areas/Identity/Pages/Account/Manage/RemoveUser.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/RemoveUser.cshtml
@@ -9,32 +9,49 @@
     <h3>@ViewData["Title"]</h3>
     <partial name="_StatusMessage" for="StatusMessage" />
     <div class="row">
-        <div class="col-lg-12">
-            <div class="card mb-4">
-                <div class="card-body">
-                    <form id="delete-user-form" method="post" enctype="multipart/form-data">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <dvi class="row">
-                            <div class="col-lg-12">
-                                <div class="form-floating">
-                                    <div class="form-select-wrapper mt-2">
-                                        <label asp-for="SelectedUser" class="control-label"></label>
-                                        <select asp-for="SelectedUser" class="form-select" asp-items="ViewBag.SelectUserList"></select>
+        @if (ViewData["SelectUserList"] != null)
+        {
+            <div class="col-lg-12">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <form id="remove-user-form" method="post" enctype="multipart/form-data">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <dvi class="row">
+                                <div class="col-lg-12">
+                                    <div class="form-floating">
+                                        <div class="form-select-wrapper mt-2">
+                                            <label asp-for="SelectedUser" class="control-label"></label>
+                                            <select asp-for="SelectedUser" class="form-select" asp-items="ViewBag.SelectUserList"></select>
+                                        </div>
+                                    </div>
+                                    <div class="form-floating mt-4">
+                                        <input asp-for="ConfirmUserName" class="form-control" />
+                                        <label asp-for="ConfirmUserName" class="form-label"></label>
+                                    </div>
+                                    <div class="mt-4 text-center">
+                                        <button id="create-new-user-button" type="submit" class="btn btn-lg btn-danger">Remove User Account</button>
                                     </div>
                                 </div>
-                                <div class="form-floating mt-4">
-                                    <input asp-for="ConfirmUserName" class="form-control" />
-                                    <label asp-for="ConfirmUserName" class="form-label"></label>
-                                </div>
-                                <div class="mt-4 text-center">
-                                    <button id="create-new-user-button" type="submit" class="btn btn-lg btn-danger">Delete User Account</button>
-                                </div>
-                            </div>
-                        </dvi>
-                    </form>
+                            </dvi>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
+        else
+        {
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="alert alert-danger alert-icon mt-4" role="alert">
+                                <i class="uil uil-lock"></i> There are no user accounts available for removal.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 }
 else
