--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -12,10 +12,10 @@
 <section class="wrapper bg-gray">
     <div class="container pt-10 pb-14 pb-md-16">
         <h1>Manage your account</h1>
-        <hr class="my-6" />
+        <hr class="my-2" />
         <div>
             <h2>Change your account settings</h2>
-            <hr class="hr hr-blurry" />
+            <hr class="double my-4" />
             <div class="row">
                 <div class="col-md-3">
                     <partial name="_ManageNav" />
