Added further improvements to user management.

--- a/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -4,5 +4,9 @@
     ViewData["Title"] = "Confirm email change";
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
+<section class="wrapper">
+    <div class="container pt-10 pb-14 pb-md-16">
+        <h1>@ViewData["Title"]</h1>
+        <partial name="_StatusMessage" model="Model.StatusMessage" />
+    </div>
+</section>
