--- a/Areas/Identity/Pages/Account/Manage/AddNewUser.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/AddNewUser.cshtml
@@ -66,6 +66,12 @@
                                         <label asp-for="NewUserInput.ConfirmPassword"></label>
                                         <span asp-validation-for="NewUserInput.ConfirmPassword" class="text-danger"></span>
                                     </div>
+                                    <div class="form-floating mt-3">
+                                        <div class="form-check">
+                                            <input asp-for="GenRandomPasswdCheckbox" class="form-check-input" />
+                                            <label asp-for="GenRandomPasswdCheckbox">Generate a random password and email it.</label>
+                                        </div>
+                                    </div>
                                     @if (ViewData["UserRolesList"] != null)
                                     {
                                         <div class="form-floating">
