--- a/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -5,28 +5,47 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
+@if (!User.IsInRole("Owner"))
+{
+    <h3>@ViewData["Title"]</h3>
 
-<div class="alert alert-warning" role="alert">
-    <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-    </p>
-</div>
+    <div class="alert alert-warning" role="alert">
+        <p>
+            <strong>Deleting this data will permanently disable your account. It will not delete the content that you posted to this website.</strong>
+        </p>
+    </div>
 
-<div>
-    <form id="delete-user" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.RequirePassword)
-        {
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                <label asp-for="Input.Password" class="form-label"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+    <div>
+        <form id="delete-user" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if (Model.RequirePassword)
+            {
+                <div class="form-floating">
+                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
+                    <label asp-for="Input.Password" class="form-label"></label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+            }
+            <div class="mt-3">
+                <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
             </div>
-        }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
-    </form>
-</div>
+        </form>
+    </div>
+}
+else
+{
+    ViewData["Title"] = "Access Denied";
+    ViewData["ActivePage"] = ManageNavPages.Index;
+    <h3>@ViewData["Title"]</h3>
+    <div class="row">
+        <div class="col-lg-12">
+            <partial name="_StatusMessage" for="StatusMessage" />
+            <div class="any-img-container-half-height">
+                <img id="accessDeniedImage" class="any-img-half-height" src="@Model.AccessDeniedImage" alt="Access Denied" />
+            </div>
+        </div>
+    </div>
+}
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
