--- a/Areas/Identity/Pages/Account/Manage/SocialMedia.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/SocialMedia.cshtml
@@ -15,34 +15,34 @@
                 <form id="social-media-form" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating">
-                        <input asp-for="Input.GitHubUrl" class="form-control" />
-                        <label asp-for="Input.GitHubUrl" class="form-label"></label>
-                        <span asp-validation-for="Input.GitHubUrl" class="text-danger"></span>
+                        <input asp-for="LinksInput.GitHubUrl" class="form-control" />
+                        <label asp-for="LinksInput.GitHubUrl" class="form-label"></label>
+                        <span asp-validation-for="LinksInput.GitHubUrl" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.TwitterUrl" class="form-control" />
-                        <label asp-for="Input.TwitterUrl" class="form-label"></label>
-                        <span asp-validation-for="Input.TwitterUrl" class="text-danger"></span>
+                        <input asp-for="LinksInput.TwitterUrl" class="form-control" />
+                        <label asp-for="LinksInput.TwitterUrl" class="form-label"></label>
+                        <span asp-validation-for="LinksInput.TwitterUrl" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.LinkedInUrl" class="form-control" />
-                        <label asp-for="Input.LinkedInUrl" class="form-label"></label>
-                        <span asp-validation-for="Input.LinkedInUrl" class="text-danger"></span>
+                        <input asp-for="LinksInput.LinkedInUrl" class="form-control" />
+                        <label asp-for="LinksInput.LinkedInUrl" class="form-label"></label>
+                        <span asp-validation-for="LinksInput.LinkedInUrl" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.YouTubeUrl" class="form-control" />
-                        <label asp-for="Input.YouTubeUrl" class="form-label"></label>
-                        <span asp-validation-for="Input.YouTubeUrl" class="text-danger"></span>
+                        <input asp-for="LinksInput.YouTubeUrl" class="form-control" />
+                        <label asp-for="LinksInput.YouTubeUrl" class="form-label"></label>
+                        <span asp-validation-for="LinksInput.YouTubeUrl" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.FacebookUrl" class="form-control" />
-                        <label asp-for="Input.FacebookUrl" class="form-label"></label>
-                        <span asp-validation-for="Input.FacebookUrl" class="text-danger"></span>
+                        <input asp-for="LinksInput.FacebookUrl" class="form-control" />
+                        <label asp-for="LinksInput.FacebookUrl" class="form-label"></label>
+                        <span asp-validation-for="LinksInput.FacebookUrl" class="text-danger"></span>
                     </div>
                     <div class="form-floating mt-3">
-                        <input asp-for="Input.InstagramUrl" class="form-control" />
-                        <label asp-for="Input.InstagramUrl" class="form-label"></label>
-                        <span asp-validation-for="Input.InstagramUrl" class="text-danger"></span>
+                        <input asp-for="LinksInput.InstagramUrl" class="form-control" />
+                        <label asp-for="LinksInput.InstagramUrl" class="form-label"></label>
+                        <span asp-validation-for="LinksInput.InstagramUrl" class="text-danger"></span>
                     </div>
                     <div class="mt-4 d-flex justify-content-center">
                         <button id="update-social-media-button" type="submit" class="w-20 btn btn-lg btn-primary">Save</button>
