--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -4,22 +4,28 @@
     ViewData["Title"] = "Resend email confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<section class="wrapper bg-gray">
+    <div class="container pt-10 pb-14 pb-md-16">
+        <h1>@ViewData["Title"]</h1>
+        <h2>Enter your email.</h2>
+        <hr class="my-4" />
+        <div class="row">
+            <div class="col-md-4">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-floating">
+                        <input asp-for="Input.Email" class="form-control" aria-required="true" />
+                        <label asp-for="Input.Email" class="form-label"></label>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="mt-3">
+                        <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
+                    </div>
+                </form>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
-        </form>
+        </div>
     </div>
-</div>
+</section>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
