--- a/Areas/Identity/Pages/Account/Manage/OwnerPanel.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/OwnerPanel.cshtml
@@ -40,9 +40,9 @@ else
     <h3>@ViewData["Title"]</h3>
     <p>You do not have permission to access this page.</p>
     <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
-            <div class="any-square-img-container">
-                <img id="accessDeniedImage" class="any-square-img" src="@Model.AccessDeniedImage" alt="Access Denied" />
+        <div class="col">
+            <div class="mt-4">
+                <img id="accessDeniedImage" src="@Model.AccessDeniedImage" alt="Access Denied" />
             </div>
         </div>
     </div>
