--- a/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -23,8 +23,7 @@
                     </p>
                 </li>
                 <li>
-                    <p>Scan the QR Code or enter this key <kbd class="qr-code">@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
-                    <div class="alert alert-info">Learn how to <a href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</a>.</div>
+                    <p>Scan the QR Code or enter this key <kbd class="qr-code">@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>                    
                     <div id="qrCode"></div>
                     <div id="qrCodeData" data-url="@Model.AuthenticatorUri"></div>
                 </li>
@@ -56,4 +55,6 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script type="text/javascript" src="~/lib/qrcode/qrcode.min.js"></script>
+    <script type="text/javascript" src="~/js/qrcode.js"></script>
 }
