Added back jQuery and enabled the "summernote" text editor.

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -135,7 +135,7 @@
 
 @section Scripts{
     <script>
-        //$('#form_message').summernote();
+        $('#form_message').summernote();
     </script>
     <!--Sweet Alerts-->
     <script>
